--- a/package.json
+++ b/package.json
@@ -28,8 +28,7 @@
     "punycode": "^2.3.1",
     "railway": "^2.0.17",
     "react-router-dom": "^6.4.4",
-    "sequelize": "^6.3.5",
-    "uri-js": "^4.2.2"
+    "sequelize": "^6.3.5"
   },
   "devDependencies": {
     "chai": "^4.2.0",
