--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "express": "^4.17.1",
     "ioredis": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
-    
+    "mercadopago": "^2.0.8",
     "morgan": "^1.10.0",
     "patch-package": "^8.0.0",
     "pg": "^8.5.1",
