--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
+    "build": "CI=false react-scripts build",
     "test": "mocha -w ./tests/**/*.spec.js"
   },
   "author": "Henry",
