--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "build": "react-scripts build",
     "test": "mocha -w ./tests/**/*.spec.js"
   },
   "author": "Henry",
@@ -17,6 +16,7 @@
   "dependencies": {
     "axios": "^1.6.8",
     "body-parser": "^1.19.0",
+    "build": "^0.1.4",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
